# kawasaki_experimental

./: readme.md
kawasaki_as_driver/: test_receive_poses.py  test_send_poses.py
kawasaki_as_driver/d_controller/: Kawasaki_code.as  protocol.md  read_status.py  read_status_where.py  readme.md  telnet_admin.py  telnet_commands.py  test_receive_poses.py  test_send_poses.py
kawasaki_driver_D_controller/: Kawasaki_side_code.as  test_connect_as_admin.py
kawasaki_experimental/: CMakeLists.txt  package.xml
kawasaki_fs03n_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  readme.md
kawasaki_fs03n_moveit_config/config/: joint_limits.yaml  kawasaki_fs03n.srdf
kawasaki_fs03n_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kawasaki_fs06l_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  readme.md
kawasaki_fs06l_moveit_config/config/: joint_limits.yaml  kawasaki_fs06l.srdf
kawasaki_fs06l_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kawasaki_fs_support/: CMakeLists.txt  package.xml  readme.md
kawasaki_fs_support/launch/: load_fs03n.launch  load_fs06l.launch  test_fs03n.launch  test_fs06l.launch
kawasaki_fs_support/meshes/fs03n/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
kawasaki_fs_support/meshes/fs03n/visual/: base_link.dae  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae
kawasaki_fs_support/meshes/fs06l/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
kawasaki_fs_support/meshes/fs06l/visual/: base_link.dae  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae
kawasaki_fs_support/tests/: roslaunch_test_fs03n.xml  roslaunch_test_fs06l.xml
kawasaki_fs_support/urdf/: fs03n.xacro  fs03n_macro.xacro  fs06l.xacro  fs06l_macro.xacro
