<package format="2">
  <name>kawasaki_experimental</name>
  <version>0.1.0</version>
  <description>Experimental packages for Kawasaki manipulators within ROS-Industrial.</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/kawasaki_experimental</url>
  <url type="bugtracker">https://github.com/gavanderhoorn/kawasaki_experimental/issues</url>
  <url type="repository">https://github.com/gavanderhoorn/kawasaki_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>kawasaki_fs03n_moveit_config</exec_depend>
  <exec_depend>kawasaki_fs06l_moveit_config</exec_depend>
  <exec_depend>kawasaki_fs_support</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
