<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kawasaki_fs_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the Kawasaki FS series of manipulators.
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Kawasaki FS manipulators. This currently includes the FS03N and
      FS06L models only.
    </p>
    <p>
      Joint limits and maximum joint velocities are based on the information in
      the <em>Kawasaki Robot FS03N Installation and Connection Manual</em>
      (<em>90202-1087DEC</em>) and <em>TODO</em> (<em>TODO</em>). All urdfs are
      based on the default motion and joint velocity limits, unless noted
      otherwise (ie: no support for high speed joints, extended / limited
      motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/kawasaki_fs_support</url>
  <url type="bugtracker">https://github.com/gavanderhoorn/kawasaki_experimental/issues</url>
  <url type="repository">https://github.com/gavanderhoorn/kawasaki_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>support_package</tag>
        <tag>description</tag>
        <tag>kawasaki</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>fs03n</tag>
        <tag>fs06l</tag>
        <tag>experimental</tag>
      </tags>
    </rosindex>
  </export>
</package>
